<resources>
    <string name="app_name">Extr</string>
    <string name="overview">Overview</string>
    <string name="new_expense">New expense</string>
    <string name="new_category">New category</string>
    <string name="new_group">New group</string>
    <string name="expense_detail">Expense detail</string>
    <string name="category_detail">Category detail</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_title">Welcome to Extr</string>
    <string name="welcome_sub_title">An easy and fast way to manage your expense</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login_title">Log in to Expense Manager</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="forget_your_login_details">Forget your login details?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in.</string>
    <string name="get_help_signing_in">Get help signing in.</string>
    <string name="sign_up_title_step_one">Step 1/2</string>
    <string name="sign_up_title_step_two">Step 2/2</string>
    <string name="next">Next</string>
    <string name="select_color">Select color</string>
    <string name="select_icon">Select icon</string>
    <string name="preview">Preview</string>
    <string name="category">Category</string>
    <string name="user">User</string>
    <string name="date">Date</string>
    <string name="no_category">No Category</string>
    <string name="expense_date">Expense Date</string>
    <string name="start_expense_date">Start Expense Date</string>
    <string name="notification">Notifications</string>
    <string name="weekly_notification">Weekly report</string>
    <string name="select_a_group">Select a group</string>
    <string name="send_feedback">Send feedback</string>
    <string name="help_center">Help center</string>
    <string name="privacy_and_licenses">Privacy &amp; licenses</string>
    <string name="monthly_notification">Monthly report</string>
    <string name="notification_date">Notification date</string>
    <string name="notification_time">Notification time</string>
    <string name="end_expense_date">End Expense Date</string>
    <string name="expense">Expense</string>
    <string name="group">Group</string>
    <string name="name">Name</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="filter_me">Me</string>
    <string name="report">Report</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_read">Mark All Read</string>
    <string name="settings">Settings</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_string">Sign out</string>
    <string name="left_to_spend">LEFT TO SPEND</string>
    <string name="spendable_monthly">SPENDABLE MONTHLY</string>
    <string name="spendable_weekly">SPENDABLE WEEKLY</string>
    <string name="title_activity_expense_detail">Expense details</string>
    <string name="title_activity_category_detail">Category details</string>
    <string name="title_activity_new_expense">New Expense</string>
    <string name="title_activity_new_category">New Category</string>
    <string name="category_description">Add new or edit existing category</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_report_detail">Report details</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="amount">Amount</string>
    <string name="about">About</string>
    <string name="note">Note</string>
    <string name="member">Members</string>
    <string name="join">Join</string>
    <string name="invite">Invite</string>
    <string name="sent">Sent</string>
    <string name="search">Search</string>
    <string name="search_hint">Search fullname, email or phone...</string>
    <string name="username_used">Username is already used.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="current_password_incorrect">Current password is incorrect.</string>
    <string name="input_cannot_be_empty">Input cannot be empty.</string>
    <string name="input_too_short">Inputs cannot be less than six characters.</string>
    <string name="password_mismatch">Password mismatch.</string>
    <string name="accepted">Accepted</string>
    <string name="accept">Accept</string>
    <string name="invite_new">New invitation</string>
    <string name="created_at">Created At</string>
    <string name="created_by">Created By</string>
    <string name="shared_preferences_session_key">Session</string>
    <string name="create_an_expense">Create an expense</string>
    <string name="photo_date_format_string">yyyyMMddHHmmss</string>
    <string name="photo_select_source">Select source</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="weekly_report_message">Your total expense for last week</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="monthly_report_message">Your total expense for last month</string>
    <string name="delete_profile_image">Delete Profile Image</string>
    <string name="make_groups">Make Groups</string>
    <string name="group_introduction">Pull out side bar, switch to group list and make a new group</string>
    <string name="define_categories">Define Categories</string>
    <string name="category_introduction">Go to setting page and setup categories</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="expense_introduction">Go to expense page and view all expenses</string>
    <string name="view_reports">View Reports</string>
    <string name="report_introduction">Go to report page, select date range and view reports</string>
    <string name="get_help">Get Help</string>
    <string name="help_introduction">Go to setting page and review this guide in Help Center</string>
    <string name="select_group_hint">You need to select a group first</string>
    <string name="unsaved_changes_message">Are you sure to discard your unsaved changes?</string>
    <string name="read_all_notification">Read all notifications</string>
    <string name="read_all_notification_message">Are you sure to mark all notifications as read?
    </string>
    <string name="no_unread_notification">No unread notification</string>
    <string name="no_unread_notification_message">You do not have any unread notification right now.
    </string>
    <string name="delete_notification_title">Delete Notification</string>
    <string name="delete_notification_message">Are you sure to delete this notification?</string>
    <string name="delete_photo_title">Delete photo</string>
    <string name="delete_photo_message">Are you sure to delete this photo?</string>
    <string name="delete_profile_image_message">Are you sure to delete profile image?</string>
    <string name="delete_expense_title">Delete Expense</string>
    <string name="delete_category_title">Delete Category</string>
    <string name="delete_expense_message">Are you sure to delete this expense?</string>
    <string name="delete_category_message">Are you sure to delete this category?</string>
    <string name="no_notifications">YOU HAVE NO NOTIFICATIONS</string>
    <string name="no_expense_hint">NO EXPENSE DATA AVAILABLE</string>
    <string name="version_hint">Version 1.0.1</string>
    <string name="profile">Profile</string>
    <string name="general">General</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="total">Total</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="ave">ave</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="report_average">Average: $</string>
    <string name="transition_category">transition_category</string>
    <string name="budget">Budget</string>
    <string name="weekly_budget">Weekly Budget</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="weekly_budget_optional">(optional) e.g. $800</string>
    <string name="monthly_budget_optional">(optional) e.g. $2600</string>
    <string name="change_photo">change photo</string>
    <string name="actions">Actions</string>
    <string name="soft_default">Default</string>
    <string name="soft_blue">Blue</string>
    <string name="soft_blue_gray">Blue Gray</string>
    <string name="soft_brown">Brown</string>
    <string name="soft_cyan_like">Cyan</string>
    <string name="soft_deep_purple">Deep Purple</string>
    <string name="soft_green">Green</string>
    <string name="soft_indigo">Indigo</string>
    <string name="soft_orange">Orange</string>
    <string name="soft_purple">Purple</string>
    <string name="soft_purple_deep">Purple Deep</string>
    <string name="soft_purple_deep_light">Purple Deep Light</string>
    <string name="soft_red">Red</string>
    <string name="soft_yellow">Yellow</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="leave">Leave</string>
    <string name="nav_overview">Overview</string>
    <string name="nav_expense">Expense</string>
    <string name="nav_report">Report</string>
    <string name="nav_category">Category</string>
    <string name="nav_group">Group</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="update_photo">Update photo</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="title_activity_group_detail">Group details</string>
    <string name="title_activity_new_group">New Group</string>
    <string name="title_activity_invitation_email">InvitationEmailActivity</string>
    <string name="category_icon_logo">Logo</string>
    <string name="category_icon_local_bar">Bar</string>
    <string name="category_icon_local_cafe">Cafe</string>
    <string name="category_icon_local_drink">Drink</string>
    <string name="category_icon_local_gas_station">Gas Station</string>
    <string name="category_icon_local_grocery">Grocery</string>
    <string name="category_icon_local_taxi">Taxi</string>
    <string name="category_icon_directions_bus">Bus</string>
    <string name="category_icon_restaurant">Restaurant</string>
    <string name="category_icon_bubble_chart">Bubble Chart</string>
    <string name="category_icon_fitness_center">Fitness</string>
</resources>