<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expense_detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.expensemanager.app.expense.ExpenseDetailActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/expense_detail_activity_expense_detail_title_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/space_medium"

        android:text="@string/expense_detail"
        android:textSize="@dimen/text_medium"/>

    <!-- Amount label -->
    <TextView
        android:id="@+id/expense_detail_activity_amount_label_text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_detail_activity_expense_detail_title_text_view_id"
        android:layout_marginLeft="@dimen/space_medium"
        android:layout_marginRight="@dimen/space_medium"
        android:layout_marginBottom="@dimen/space_really_small"

        android:paddingLeft="@dimen/space_really_small"
        android:paddingRight="@dimen/space_really_small"
        android:text="@string/amount"
        android:textSize="@dimen/text_small"/>

    <!-- Amount -->
    <TextView
        android:id="@+id/expense_detail_activity_amount_text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_detail_activity_amount_label_text_view_id"
        android:layout_marginLeft="@dimen/space_medium"
        android:layout_marginRight="@dimen/space_medium"

        android:padding="@dimen/space_really_small"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium_small"
        android:background="@drawable/background_round_corner_white"/>

    <!-- Note label -->
    <TextView
        android:id="@+id/expense_detail_activity_note_label_text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_detail_activity_amount_text_view_id"
        android:layout_marginLeft="@dimen/space_medium"
        android:layout_marginRight="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginBottom="@dimen/space_really_small"

        android:paddingLeft="@dimen/space_really_small"
        android:paddingRight="@dimen/space_really_small"
        android:text="@string/note"
        android:textSize="@dimen/text_small"/>

    <!-- Note -->
    <TextView
        android:id="@+id/expense_detail_activity_note_text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_detail_activity_note_label_text_view_id"
        android:layout_marginLeft="@dimen/space_medium"
        android:layout_marginRight="@dimen/space_medium"

        android:padding="@dimen/space_really_small"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium_small"
        android:background="@drawable/background_round_corner_white"/>

</RelativeLayout>
